# antropomorphic_arm

./: LICENSE  README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Encoders.msg
src/robot_motion/: CMakeLists.txt  package.xml
src/robot_motion/src/: motion_controller_node.cpp
src/sensors_pkg/: CMakeLists.txt  package.xml
src/sensors_pkg/scripts/: sensors_runner.py
src/sensors_pkg/sensors_pkg/: stepper_encoder.py
